--- a/css/game.css
+++ b/css/game.css
@@ -7,9 +7,8 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-main{
+main {
     display: flex;
-    flex-wrap: wrap;
     grid-gap: 2vw;
     grid-template-columns: 65% 1fr;
 }
@@ -25,6 +24,7 @@ header {
 header ul {
     display: flex;
     list-style: none;
+    margin: 20px 0px;
 }
 
 header li {
@@ -45,9 +45,11 @@ a {
 }
 
 aside {
-    width: 25vw;
+    width: 16vw;
     /* border: black solid 1px; */
     padding: 0px 10px;
+    margin-right: 2vw;
+
 }
 
 p {
@@ -58,45 +60,222 @@ p {
 /* Stylizing game elements */
 
 #screen {
-    width: 67.708333vw;
-    height: 38.085937vw;
-    margin: 0px 0vw 0vw 2vw;
+    width: 75.011720581340843vw;
+    height: 42.19409282700422vw;
+    margin: 0px 0vw 0vw 40px;
     border: black solid 1px;
 }
 
 #game {
+    position: relative;
     width: 100%;
     height: 100%;
 }
 
 #game_background {
+    position: absolute;
     background-image: url('../assets/images/student_joe_background.svg');
     background-size: 100%;
     width: 100%;
     height: 100%;
 }
 
+/* Game sprites */
+
 #game_sprites {
+    position: absolute;
     width: 100%;
     height: 100%;
+}
+
+#a_container0 {
+    width: 13.2vw;
+    height: 21vw;
+    position: absolute;
+    top: 21.2vw;
+    right: 5.5vw;
+    /* border: black solid 1px; */
+}
+
+#container_joe {
+    width: 100%;
+    height: 100%;
+    background-size: 100%;
+    background-image: url('../assets/images/joe.svg');
+    animation: joe_reads 6s 5s linear infinite alternate;
+}
+
+/* .joe_smiling {
+    background-image: url('../assets/images/joe.svg');
+    background-size: 100%;
+}
+
+.joe_book_1 {
+    background-image: url('../assets/images/joe_book_1.svg');
+    background-size: 100%;
+}
+
+.joe_book_2 {
+    background-image: url('../assets/images/joe_book_2.svg');
+    background-size: 100%;
+}
+
+.joe_book_3 {
+    background-image: url('../assets/images/joe_book_3.svg');
+    background-size: 100%;
+} */
+
+@keyframes joe_reads {
+    0% {
+        background-image: url('../assets/images/joe.svg');
+    }
+
+    77% {
+        background-image: url('../assets/images/joe.svg');
+    }
+
+    78% {
+        background-image: url('../assets/images/joe_book_1.svg');
+    }
+
+    79% {
+        background-image: url('../assets/images/joe_book_2.svg');
+    }
+
+    80% {
+        background-image: url('../assets/images/joe_book_3.svg');
+    }
+
+    100% {
+        background-image: url('../assets/images/joe_book_3.svg');
+    }
 }
 
 #a_container1 {
-    width: 10vw;
-    height: 10vw;
-    border: black solid 1px;
+    width: 4.641350210970464vw;
+    height: 6.13vw;
+    position: absolute;
+    top: 18vw;
+    right: 35vw;
+    /* border: black solid 1px; */
 }
 
 #a_sprite1 {
-
-}
-
-#game_ui {
+    background-image: url('../assets/images/green_ghost.svg');
+    background-size: 100%;
     width: 100%;
     height: 100%;
 }
 
+/* Game Ui */
 
+#game_ui {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#score_board {
+    position: absolute;
+    width: 7.4vw;
+    height: 3.3vw;
+    left: 1.2vw;
+    top: 0.5vw;
+}
+
+.points_counter {
+    background-image: url('../assets/images/points_counter.svg');
+    background-size: 100%;
+}
+
+.points_counter_passed {
+    background-image: url('../assets/images/points_counter_passed.svg');
+    background-size: 100%;
+}
+
+#time_board {
+    position: absolute;
+    background-image: url('../assets/images/time_bar.svg');
+    background-size: 100%;
+    width: 18vw;
+    height: 1.6vw;
+    left: 27.7vw;
+    top: 1.7vw;
+}
+
+#motivation_board {
+    position: absolute;
+    width: 12vw;
+    height: 3vw;
+    left: 62vw;
+    top: 1vw;
+}
+
+.motivation_3 {
+    background-image: url('../assets/images/motivation_3.svg');
+    background-size: 100%;
+}
+
+.motivation_2 {
+    background-image: url('../assets/images/motivation_2.svg');
+    background-size: 100%;
+}
+
+.motivation_1 {
+    background-image: url('../assets/images/motivation_1.svg');
+    background-size: 100%;
+}
+
+#mute_button {
+    position: absolute;
+    width: 2.7vw;
+    height: 2.7vw;
+    left: 1.2vw;
+    top: 38.5vw;
+}
+
+.mute {
+    background-image: url('../assets/images/mute_button.svg');
+    background-size: 100%;
+}
+
+.unmute {
+    background-image: url('../assets/images/unmute_button.svg');
+    background-size: 100%;
+}
+
+#play_pause_button {
+    position: absolute;
+    width: 2.7vw;
+    height: 2.7vw;
+    left: 5vw;
+    top: 38.5vw;
+}
+
+.pause_button {
+    background-image: url('../assets/images/pause_button.svg');
+    background-size: 100%;
+}
+
+.play_button_1 {
+    background-image: url('../assets/images/play_button_1.svg');
+    background-size: 100%;
+}
+
+#how_to_button {
+    position: absolute;
+    width: 2.7vw;
+    height: 2.7vw;
+    left: 8.83vw;
+    top: 38.5vw;
+}
+
+.how_to_button {
+    background-image: url('../assets/images/how_to_button.svg');
+    background-size: 100%;
+}
+
+/* Title screen */
 
 #title_screen {
     background-image: url();
@@ -105,16 +284,12 @@ p {
 /* Media queries */
 
 @media only screen and (max-width:1300px) {
-main {
-    flex-wrap: wrap;
-}
-    #screen {
-        width: 93.75vw;
-        height: 52.734375vw;
+    main {
+        flex-wrap: wrap;
     }
 
     aside {
         width: auto;
-        margin: 0px 4vw 0vw 2vw;
+        margin: 0px 2vw 0vw 2vw;
     }
 }
